new project added

--- a/index.html
+++ b/index.html
@@ -348,6 +348,15 @@
                                                      </div>
                                                     </a>
                                                 </li>
+                                                <li>
+                                                    <a href="https://www.flipsipuzzles.com/" class="d-block" target="_blank">
+                                                     <div class="project-wrapper bg-common rel" style="background-image: url('images/projects/flipsi.png');">
+                                                         <h2 class="project-name">Flipsi Puzzles</h2>
+                                                         <h3 class="technology">HTML . CSS . Shopify</h3>
+                                                         <div class="project-tag">Shopify</div>
+                                                     </div>
+                                                    </a>
+                                                </li>
                                            </ul>
                                         </div>
                                         <div class="tab-pane fade" id="design">
@@ -468,6 +477,15 @@
                                                     <a href="https://babygoodswarehouse.com.au/" class="d-block" target="_blank">
                                                      <div class="project-wrapper bg-common rel" style="background-image: url('images/projects/babygoodwarehouse.png');">
                                                          <h2 class="project-name">Baby Goods Mornington</h2>
+                                                         <h3 class="technology">HTML . CSS . Shopify</h3>
+                                                         <div class="project-tag">Shopify</div>
+                                                     </div>
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <a href="https://www.flipsipuzzles.com/" class="d-block" target="_blank">
+                                                     <div class="project-wrapper bg-common rel" style="background-image: url('images/projects/flipsi.png');">
+                                                         <h2 class="project-name">Flipsi Puzzles</h2>
                                                          <h3 class="technology">HTML . CSS . Shopify</h3>
                                                          <div class="project-tag">Shopify</div>
                                                      </div>
