update for mobile responsive

--- a/index.html
+++ b/index.html
@@ -650,7 +650,8 @@
                     owl.owlCarousel({
                         margin: 20,
                         smartSpeed: 1000,
-                        autoplay: 6000,
+                        // autoplay: 6000,
+                        autoplay: false,
                         nav: false,
                         dots: true,
                         dotsEach: true,
