update for mobile responsive

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         
         <main id="fullpage">
             <!-- FOR SECTIONS -->
-            <section class="section" data-anchor ="home">
+            <section class="section home" data-anchor ="home">
                 <div class="section-wrapper">
                     <div class="section-header">
                         <h2 class="sub-header animate animate-2">Hi! I'm Melvin</h2>
