add favicon on the site

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 		<title>Home</title>
+        <link rel="icon" href="images/favicon-main.ico">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.6.6/jquery.fullPage.css">
